--- a/Credit_Card_Fraud_Detection.ipynb
+++ b/Credit_Card_Fraud_Detection.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNwknixuN7zOJeKU4whR/+G",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,8 +18,25 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
       "source": [
-        "CREDIT CARD FRAUD DETECTION"
+        "<a href=\"https://colab.research.google.com/github/preethika1511/CODSOFT/blob/main/Credit_Card_Fraud_Detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Credit Card Fraud Detection\n",
+        "\n",
+        "Project Overview\n",
+        "\n",
+        "The Credit Card Fraud Detection project aims to identify fraudulent transactions using machine learning techniques. The dataset used contains transactions made by credit cards in September 2013 by European cardholders. The project is implemented in a Jupyter Notebook and follows a structured workflow for data analysis and model building.\n",
+        "\n",
+        "> Add blockquote\n",
+        "\n"
       ],
       "metadata": {
         "id": "oBbpQnM4Yzdu"
@@ -2958,6 +2977,43 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dataset:\n",
+        "\n",
+        "  The dataset used in this project is a collection of credit card transactions, with the following key features:\n",
+        "\n",
+        "Time: The time elapsed between this transaction and the first transaction in the dataset.\n",
+        "\n",
+        "V1 to V28: Principal Component Analysis (PCA) transformed features.\n",
+        "\n",
+        "Amount: The transaction amount.\n",
+        "\n",
+        "Class: The target variable (1 for fraudulent transactions, 0 for non-fraudulent transactions).\n",
+        "\n",
+        "Data Preprocessing:\n",
+        "\n",
+        "  Steps for preparing the data:\n",
+        "\n",
+        "Handling missing values.\n",
+        "\n",
+        "Scaling numerical features.\n",
+        "\n",
+        "Splitting dataset into training and testing sets.\n",
+        "\n",
+        "Conclusion:\n",
+        "\n",
+        "  The project successfully detects fraudulent transactions using machine learning.\n",
+        "\n",
+        "PCA-transformed features help in improving privacy and model performance.\n",
+        "\n",
+        "Precision and recall metrics highlight the model's effectiveness in fraud detection."
+      ],
+      "metadata": {
+        "id": "N-jzhA8wWJZD"
+      }
     },
     {
       "cell_type": "markdown",
